--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,10 @@
   height: 3px;
 }
 
+.gradient-mask {
+  mask-image: linear-gradient(105deg, #18181b 50%, transparent 100%);
+}
+
 /* Firefox */
 * {
   scrollbar-width: thin;
